Add increment number for repeat number

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="contextual-menu">
         <ul class="contextual-menu-list">
-            <li><button> Crear carpeta </button></li>
+            <li class="new-folder-js"><button button-action="newFolder"> Crear carpeta </button></li>
         </ul>
     </div>
     <script src="./scripts.js"></script>
